--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Roboto', sans-serif;
     margin-top: 10%;
     background: rgb(250, 250, 250);
-    transition: background 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: background 0.4s cubic-bezier(0.215, 0.610, 0.355, 1);
 }
 
 a {
@@ -111,4 +111,33 @@ button {
 button.dark {
     background-color: rgb(40, 40, 40);
     color: rgb(240, 240, 240);
+}
+
+/* ripple support, from https://github.com/mladenplavsic/css-ripple-effect */
+
+.ripple {
+  position: relative;
+  overflow: hidden;
+  transform: translate3d(0, 0, 0);
+}
+.ripple:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  background-image: radial-gradient(circle, #000 10%, transparent 10.01%);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  transform: scale(10, 10);
+  opacity: 0;
+  transition: transform .4s, opacity 1s;
+}
+.ripple:active:after {
+  transform: scale(0, 0);
+  opacity: .2;
+  transition: 0s;
 }
