--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 */
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Muli', 'Roboto', sans-serif;
     margin-top: 10%;
     background: rgb(250, 250, 250);
     transition: background 0.4s cubic-bezier(0.215, 0.610, 0.355, 1);
@@ -81,7 +81,8 @@ button {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 1rem;
+    letter-spacing: 0.02em;
     margin: 4px 2px;
     transition-duration: 0.4s;
     cursor: pointer;
