--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,12 @@ h1.smaller {
     font-size: 4rem;
 }
 
+h1.hero {
+    text-transform: uppercase;
+    letter-spacing: 0.15rem;
+    font-weight: 300;
+}
+
 h2 {
     font-size: 1.5rem;
 }
@@ -114,31 +120,34 @@ button.dark {
     color: rgb(240, 240, 240);
 }
 
+
 /* ripple support, from https://github.com/mladenplavsic/css-ripple-effect */
 
 .ripple {
-  position: relative;
-  overflow: hidden;
-  transform: translate3d(0, 0, 0);
+    position: relative;
+    overflow: hidden;
+    transform: translate3d(0, 0, 0);
 }
+
 .ripple:after {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  pointer-events: none;
-  background-image: radial-gradient(circle, #000 10%, transparent 10.01%);
-  background-repeat: no-repeat;
-  background-position: 50%;
-  transform: scale(10, 10);
-  opacity: 0;
-  transition: transform .4s, opacity 1s;
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    background-image: radial-gradient(circle, #000 10%, transparent 10.01%);
+    background-repeat: no-repeat;
+    background-position: 50%;
+    transform: scale(10, 10);
+    opacity: 0;
+    transition: transform .4s, opacity 1s;
 }
+
 .ripple:active:after {
-  transform: scale(0, 0);
-  opacity: .2;
-  transition: 0s;
+    transform: scale(0, 0);
+    opacity: .2;
+    transition: 0s;
 }
