reorganize all styles

--- a/src/ihui.scss
+++ b/src/ihui.scss
@@ -1,1 +1,9 @@
-@import url('styles.css');
+
+// variables
+@import 'vars/all';
+
+// extras
+@import 'extras/all';
+
+// styles
+@import 'base/styles';
