--- a/src/base/buttons.scss
+++ b/src/base/buttons.scss
@@ -3,7 +3,7 @@
 button {
     background-color: #1abc9c;
     border: none;
-    color: rgb(250, 250, 250);
+    color: $light-background;
     padding: 16px 32px;
     text-align: center;
     text-decoration: none;
@@ -17,19 +17,19 @@ button {
 }
 
 .btn-default {
-    background: rgb(250, 250, 250);
-    color: rgb(40, 40, 40);
-    border: 1px solid #1abc9c;
+    background: $light-background;
+    color: $light-foreground;
+    border: 1px solid $col-primary;
 }
 
 .btn-default:hover {
-    background-color: #1abc9c;
-    color: rgb(250, 250, 250);
+    background-color: $col-primary;
+    color: $light-background;
 }
 
 .btn-dark,
 button.dark {
-    background-color: rgb(40, 40, 40);
-    color: rgb(240, 240, 240);
+    background-color: $dark-background;
+    color: $dark-foreground;
 }
 
