--- a/src/vars/colors.scss
+++ b/src/vars/colors.scss
@@ -1,3 +1,11 @@
 
+// light
 $light-background: rgb(250, 250, 250);
 $light-foreground: rgb(10, 10, 10);
+
+// dark
+$dark-foreground: rgb(240, 240, 240);
+$dark-background: rgb(40, 40, 40);
+
+// palette
+$col-primary: #14ad93;
