--- a/src/vars/colors.scss
+++ b/src/vars/colors.scss
@@ -1,6 +1,6 @@
 
 // light
-$light-background: rgb(250, 250, 250);
+$light-background: rgb(240, 240, 240);
 $light-foreground: rgb(10, 10, 10);
 
 // dark
@@ -9,3 +9,5 @@ $dark-background: rgb(40, 40, 40);
 
 // palette
 $col-primary: #14ad93;
+
+$col-primary-inverse: #eeeeee;
