--- a/src/base/styles.scss
+++ b/src/base/styles.scss
@@ -7,8 +7,11 @@
 @import 'global';
 @import 'dark';
 
+@import 'grid';
+
 @import 'typography';
 @import 'buttons';
 @import 'lists';
 
 @import 'misc';
+@import 'spacing';
