--- a/src/base/typography.scss
+++ b/src/base/typography.scss
@@ -1,43 +1,72 @@
-
 a {
-    color: #319a88;
+    color: $col-primary;
 }
-
 a:visited {
-    color: #0e5d4b;
+    color: $col-secondary;
 }
-
-h1 {
-    font-size: 4rem;
-    font-weight: 300;
-}
-
 h1.smaller {
-    font-size: 4rem;
+    font-size: 3.8rem;
 }
-
 h1.hero {
+    font-size: 4.4rem;
     text-transform: uppercase;
     letter-spacing: 0.15rem;
     font-weight: 300;
 }
-
 h2 {
     font-size: 1.5rem;
 }
-
 .center {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
 }
-
 p.tiny {
     font-size: 0.8rem;
 }
-
 p.small-emph {
     font-size: 1.1rem;
     font-weight: 500;
     padding-top: 10px;
+}
+p {
+    margin-top: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 300;
+    letter-spacing: -0.1rem;
+    margin-bottom: 2rem;
+    margin-top: 0;
+}
+h1 {
+    font-size: 4.2rem;
+    line-height: 1.2;
+}
+h2 {
+    font-size: 3.2rem;
+    line-height: 1.25;
+}
+h3 {
+    font-size: 2.4rem;
+    line-height: 1.3;
+}
+h4 {
+    font-size: 2.0rem;
+    letter-spacing: -0.08rem;
+    line-height: 1.35;
+}
+h5 {
+    font-size: 1.8rem;
+    letter-spacing: -0.05rem;
+    line-height: 1.5;
+}
+h6 {
+    font-size: 1.6rem;
+    letter-spacing: 0;
+    line-height: 1.4;
 }
