--- a/src/extras/ripples.scss
+++ b/src/extras/ripples.scss
@@ -2,7 +2,7 @@
 /* ripple support, from https://github.com/mladenplavsic/css-ripple-effect */
 
 .ripple {
-    position: absolute;
+    position: relative;
     overflow: hidden;
     transform: translate3d(0, 0, 0);
 }
