add nav to docs

--- a/src/base/global.scss
+++ b/src/base/global.scss
@@ -8,4 +8,5 @@ body {
     background: $light-background;
     color: $light-foreground;
     transition: $background-transition;
+    margin: 0;
 }
