--- a/src/base/nav.scss
+++ b/src/base/nav.scss
@@ -15,6 +15,7 @@ li.nav-item {
     vertical-align: middle;
     line-height: 1.5rem;
     transition: background 0.4s;
+    user-select: none;
 }
 
 li.nav-item:hover {
