--- a/src/base/buttons.scss
+++ b/src/base/buttons.scss
@@ -27,15 +27,10 @@ button {
     color: $col-primary-inverse;
 }
 
-.btn.btn-light,
-button.light {
-    background: $light-background;
-    color: $light-foreground;
+.btn.btn-theme,
+button.btn-theme {
+    @include theme-colors {
+        background: theme-color("background");
+        color: theme-color("foreground");
+    }
 }
-
-.btn.btn-dark,
-button.dark {
-    background-color: $dark-background;
-    color: $dark-foreground;
-}
-
