use pointer cursor on nav

--- a/src/base/nav.scss
+++ b/src/base/nav.scss
@@ -16,6 +16,7 @@ li.nav-item {
     line-height: 1.5rem;
     transition: background 0.4s;
     user-select: none;
+    cursor: pointer;
 }
 
 li.nav-item:hover {
