--- a/src/base/buttons.scss
+++ b/src/base/buttons.scss
@@ -23,6 +23,10 @@ button {
     border: 1px solid $col-primary;
 }
 
+.btn-outline {
+    border-color: rgba($col-primary, 0.4);
+}
+
 .btn-solid {
     background-color: $col-primary;
     color: $col-primary-inverse;
