--- a/src/base/layout.scss
+++ b/src/base/layout.scss
@@ -7,6 +7,14 @@
     text-align: right;
 }
 
-.text.center {
+.text-center, .text.center {
     text-align: center;
+}
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
 }
