--- a/src/base/buttons.scss
+++ b/src/base/buttons.scss
@@ -19,6 +19,10 @@ button {
     color: $col-primary;
 }
 
+.btn.btn-small {
+    padding: 8px 16px;
+}
+
 .btn-default {
     border: 1px solid $col-primary;
 }
